--- a/public/donasi.html
+++ b/public/donasi.html
@@ -58,7 +58,7 @@
                                         name="name"
                                         id="name"
                                         placeholder="Your name..."
-                                        class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-all ease-in-out duration-100 hover:border-purple-200 focus:border-purple-200 outline-none text-sm sm:text-base"
+                                        class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-all ease-in-out duration-100 hover:border-cyan-200 focus:border-cyan-400 outline-none text-sm sm:text-base"
                                     />
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                                         name="email"
                                         id="email"
                                         placeholder="yourmail@example.com"
-                                        class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-all ease-in-out duration-100 hover:border-purple-200 focus:border-purple-200 outline-none text-sm sm:text-base"
+                                        class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-all ease-in-out duration-100 hover:border-cyan-200 focus:border-cyan-400 outline-none text-sm sm:text-base"
                                     />
                                 </div>
                             </div>
@@ -88,7 +88,7 @@
                                     name="amount"
                                     id="amount"
                                     placeholder="10000"
-                                    class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-all ease-in-out duration-100 hover:border-purple-200 focus:border-purple-200 outline-none text-sm sm:text-base number-input-no-arrow"
+                                    class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-all ease-in-out duration-100 hover:border-cyan-200 focus:border-cyan-400 outline-none text-sm sm:text-base number-input-no-arrow"
                                 />
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                                     name="message"
                                     id="message"
                                     rows="5"
-                                    class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-colors ease-in-out duration-100 hover:border-purple-200 focus:border-purple-200 outline-none text-sm sm:text-base"
+                                    class="w-full px-1.5 py-2 border-b bg-transparent border-gray-300 shadow-sm transition-colors ease-in-out duration-100 hover:border-cyan-200 focus:border-cyan-400 outline-none text-sm sm:text-base"
                                     placeholder="Your message..."
                                 ></textarea>
                             </div>
